--- a/input/_Layout.cshtml
+++ b/input/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Insomnia - Sleeping With Eyes Open</title>
-	<meta name="description" content="Ivari Horm Personal Site" />
+	<meta name="description" content="Insomnia Picture Blog Site" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" type="text/css" href="@Context.GetLink("/css/main.css")" />
 	<link rel="stylesheet" media="screen and (max-width: 900px)" href="@Context.GetLink("/css/mobile.css")" />
@@ -13,9 +13,7 @@
 </head>
 
 <body>
-	<main>
-		@RenderBody()
-	</main>
+	@RenderBody()
 </body>
 
 </html>
