--- a/input/css/main.css
+++ b/input/css/main.css
@@ -1,7 +1,27 @@
-main > a img {
+body, figure {
+	margin: 0;
+}
+
+main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+footer {
+	text-align: center;
+}
+
+main ul {
+	display: flex;
+	list-style-type: none;
+	gap: 1rem;
+}
+
+main ul a img {
 	object-fit: cover;
 	width: 15vw;
-	height: 15vh;
+	aspect-ratio: 1/1;
 	border-radius: 50%;
 	opacity:0.7;
 	filter:alpha(opacity=70);
@@ -9,7 +29,8 @@ main > a img {
 	min-height: 10rem;
 }
 
-main > a img:hover {
+main ul a img:hover {
 	opacity:1.0;
 	filter:alpha(opacity=100);
 }
+
