--- a/input/index.cshtml
+++ b/input/index.cshtml
@@ -8,13 +8,17 @@ ArchivePageSize: 5
 	Layout = "_Layout.cshtml";
 }
 
-<h1>Sleeping With Eyes Open</h1>
+<main>
+	<h1>Sleeping With Eyes Open</h1>
 
-@foreach (var post in Model.GetChildren()) {
-	<a href="@post.GetLink()">
-		<img src="@($"{post.Destination.Parent}/{post.Destination.FileNameWithoutExtension}.jpg")" alt="Together" />
-	</a>
-}
+	<ul>
+	@foreach (var post in Model.GetChildren()) {
+		<li><a href="@post.GetLink()">
+			<img src="@($"{post.Destination.Parent}/{post.Destination.FileNameWithoutExtension}.jpg")" alt="Together" />
+		</a></li>
+	}
+	</ul>
+</main>
 
 <footer>
 	Powered by Insomnia Theme
