Fix front page layout for multiple items

--- a/input/css/main.css
+++ b/input/css/main.css
@@ -27,6 +27,8 @@ main ul {
 	display: flex;
 	list-style-type: none;
 	gap: 1rem;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
 main ul a img {
